# droid_policy_learning

./: .dockerignore  .gitignore  .gitmodules  README.md  apply_gpu.sh  inference_real_robot.py  inference_with_prompt.py  learned_policy_controller.py  pyproject.toml  requirements.txt  setup.py  train_droid_auto.py
.devcontainer/: README.md  attached-container-config.example.json  devcontainer.json
.robocasa/data_statistics/: dataset_statistics_382c9c1f669d3c03.json  dataset_statistics_3f4d770d2bef7874.json  dataset_statistics_46743a071ed3844e.json  dataset_statistics_8e313d7eb01bb081.json  dataset_statistics_c5b62e3d99cab723.json  dataset_statistics_d620f4ad7e9dcd19.json  dataset_statistics_df38af03b20a304d.json  dataset_statistics_eb364c587cd00f0a.json
.robocasa/lang_token/: distilbert_lang.pkl
agents/: __init__.py
agents/encoders/: __init__.py  cleandift_img_encoder.py
apptainer/: README.md  droid_policy.def  entrypoint.sh  requirements-apptainer.txt  run_container.sh  run_policy_server.sh  run_slurm.sh
docker/: Dockerfile  README.md  docker-compose.headless.yaml  docker-compose.x11.yaml  entrypoint.sh
docs/: action_normalization_flow.md  dataset_formats_robocasa_libero_droid.md  diffusion_condition.md  docker_troubleshooting.md  drift_libero_training_report.md  drift_policy_libero_improvement_plan.md  droid_dataset_json.md  multi_gpu_training.md  obs_encoder_visual_backbone.md  obs_net.md  octo_dataset_functions_analysis.md  policy_robocasa_grpc.md  rlds_dataloader.md  robomimic_utils_classes_analysis.md
examples/: droid_dataloader.py  droid_rlds_reference.py
robomimic/: macros.py  macros_private.py
robomimic/algo/: README.md  __init__.py  algo.py  diffusion_policy.py  diffusion_policy_arch.md  drift_policy.py  drift_utils.py
robomimic/config/: __init__.py  base_config.py  diffusion_policy_config.py  drift_policy_config.py
robomimic/envs/: env_robosuite.py
robomimic/models/: obs_core.py  obs_nets.py
robomimic/scripts/: README_experiments.md  inspect_libero_robocasa_hdf5.py  log_eval_to_wandb.py  (+12 more)
scripts/: rlds_infer_trajectory.py
slurm/: README.md  action_space_exp.md  drift_vs_diffusion_exp.md  eval_app.slurm  test_wandb_log.slurm  train_action_space_comparison.slurm  train_custom.slurm  train_custom_conda.slurm  train_drift_vs_diffusion.slurm  train_droid.slurm  train_droid_app.slurm  train_droid_conda.slurm  train_libero_app.slurm  train_rlds.slurm  train_robocasa_app.slurm
tests/: test_log_utils.py
(+31 files in other folders)
